[package]
name = "tlv-derive"
version = "0.0.0"
authors = ["Velnbur <kyrylo.baybula@distributedlab.com>"]
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

[dev-dependencies]
tlv = { path = "../" }
